fixed crappy scrollbar shenanigans

--- a/layers.less
+++ b/layers.less
@@ -17,6 +17,7 @@
     right: -10px;
     font-size:40px;
     border: 1px solid #b3b3b3;
+    border-radius: 5px;
   }
 
   .shouldHide {
