--- a/style.less
+++ b/style.less
@@ -9,6 +9,8 @@
 body {
   display: flex;
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .mapContainer {
